--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.png">
-    <link rel="stylesheet" type="text/css" href="<%= webpackConfig.output.publicPath %>assets/css/bootstrap-grid.min.css">
     <title>AllCoinStat</title>
+    <link rel="stylesheet" type="text/css" href="<%= webpackConfig.output.publicPath %>assets/css/bootstrap-grid.min.css">
 
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/img/apple-touch-icon-57x57-composed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/img/apple-touch-icon-76x76-composed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/img/apple-touch-icon-120x120-composed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/img/apple-touch-icon-152x152-composed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/img/apple-touch-icon-180x180-composed.png">
+    <link rel="icon" sizes="192x192" href="/img/apple-touch-icon-192x192-composed.png">
   </head>
   <body>
     <noscript>
