--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.png">
     <title>AllCoinStat</title>
     <link rel="stylesheet" type="text/css" href="<%= webpackConfig.output.publicPath %>assets/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" type="text/css" href="<%= webpackConfig.output.publicPath %>assets/css/style_v1.css">
 
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/img/apple-touch-icon-57x57-composed.png">
